feat: Phase 3-6 Reviewer Core + CLI + Orchestrator (22 tests, CLI verified)
Phase 3-5 (Reviewer Core):
- nodes/: CouncilNode, NodeContext, NodeInputs (typed port interfaces)
- ai/: ChatClientConfig (@ConditionalOnBean), ChatClientRegistry (lazy ObjectProvider)
- reviewer/: FindingParser (markdown fence + JSON), GenericReviewerNode, GenericReReviewerNode
- gate/: GateEvaluator (per-reviewer + path-rule), GateEvaluatorNode
- fixer/: GenericFixerNode, PatchApplier (file replace)

Phase 6 (Interface):
- graph/CouncilOrchestrator: ties reviewers -> aggregator -> gate -> fixer -> re-reviewer
- cli/ReviewCli: Picocli commands (run, validate, cost) with Spring IFactory
- CouncilApplication: Spring IFactory bridges CLI to @Component subcommands
- config/ConfigBeans: default sub-config beans
- @Component on persistence/audit repos; indexes use IF NOT EXISTS
- application.yml: spring.ai autoconfigure exclude (so validate works without API keys)

Verification:
- mvn test: 22/22 passing
- java -jar target/review.jar validate --config=council.yaml: parses 3 reviewers
- java -jar target/review.jar cost rev-test123: queries SQLite (0.0000)
- java -jar target/review.jar --help: shows run/validate/cost

Co-Authored-By: Claude Code <noreply@anthropic.com>