@@ -6,8 +6,8 @@ import org.springframework.context.annotation.Configuration;
 import org.sqlite.SQLiteDataSource;
 import javax.sql.DataSource;
 import java.io.File;
-import java.nio.file.Files;
-import java.nio.file.Path;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 
 @Configuration
 public class DataSourceConfig {
@@ -22,9 +22,11 @@ public class DataSourceConfig {
         var dbFile = new File(dir, "review.db");
         var ds = new SQLiteDataSource();
         ds.setUrl("jdbc:sqlite:" + dbFile.getAbsolutePath());
-        // Apply V1 schema (simple migration; full Flyway in v1.1)
-        try (var c = ds.getConnection(); var s = c.createStatement()) {
-            var sql = new String(Files.readAllBytes(Path.of("src/main/resources/db/migration/V1__init.sql")));
+        // Apply V1 schema from classpath
+        try (var c = ds.getConnection(); var s = c.createStatement();
+             InputStream is = DataSourceConfig.class.getResourceAsStream("/db/migration/V1__init.sql")) {
+            if (is == null) throw new IllegalStateException("V1__init.sql not found on classpath");
+            var sql = new String(is.readAllBytes(), StandardCharsets.UTF_8);
             for (var stmt : sql.split(";")) {
                 var trimmed = stmt.trim();
                 if (!trimmed.isEmpty()) s.execute(trimmed);
